доработка метода get issue
